exception filter and log

--- a/Healthcare/Healthcare/appsettings.json
+++ b/Healthcare/Healthcare/appsettings.json
@@ -10,5 +10,6 @@
     "Audience": "localhost",
     "SecretKey": "averylongsecretkeythatisrequiredtobeused"
   },
+  "path": "@\"C:\\hcv2\\Healthcare\\Healthcare\\Logs\\log.txt",
   "AllowedHosts": "*"
 }
